add JwtKeyGenerationException; update SecurityConfig to throw custom exception and refactor User and UserDTO with Lombok annotations